singular and plural client was edited in the log